--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
          <h1>Marwan Tarek</h1>
          <h4 >Alex, Egypt</h4>
          <br>
-         <h6>"Front-end develobre "</h6>
+         <h6>"Front-end developre "</h6>
          <br>
         </div>
        
